--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,12 @@
+/* @import './base.css'; */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* @import './base.css';
-
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+
   padding: 2rem;
   font-weight: normal;
 }
@@ -14,7 +14,7 @@
 @media (hover: hover) {
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: auto;
     place-items: center;
