🐛 [fix] 레이아웃 수정..

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,28 +1,26 @@
-/* @import './base.css'; */
+@import '@/assets/css/base.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 #app {
-  width: 100%;
-
-  padding: 2rem;
   font-weight: normal;
+  min-height: 100vh;
+  min-width: 1420px;
+  max-width: 1920px;
 }
 
 @media (hover: hover) {
 }
 
-/* @media (min-width: 1024px) {
+@media (min-width: 1024px) {
   body {
-    display: auto;
+    /* display: auto; */
     place-items: center;
   }
 
   #app {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
-} */
+}
